flex width limit to prevent overflow

--- a/style.css
+++ b/style.css
@@ -6,17 +6,17 @@ html, body {
 }
 
 .container {
-    /* height: max-content; */
-    height: 100vh;
     display: flex;
     justify-content: center;
+    align-content: center;
     flex-direction: column;
-    width: fit-content;
-    max-width: 100vh;
+    width: max-content;
+    max-width: 400px;
+    height: 100%;
     margin: auto;
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
     .container {
         width: 40%;
     }
@@ -32,18 +32,19 @@ html, body {
     .container {
         width: 70%;
     }
-}
+}*/
 
 @media (max-width: 576px) {
     .container {
         width: 100%;
     }
-}
+} 
 
 .container .output-display {
     background-color: black;
-    flex: 0 1 30vh;
-    max-height: 30vh;
+    /* flex: 0 0 30vh; */
+    flex-direction: row-reverse;
+    max-height: 35vh;
     display: flex;
 }
 
@@ -51,7 +52,6 @@ html, body {
     color: white;
     font-weight: 100;
     font-size: 4.2rem;
-    /* float: right; */
     padding: 10px;
     justify-content: flex-end;
 }
@@ -59,15 +59,17 @@ html, body {
 
 .container .buttons {
     display: flex;
-    height: 70vh;
+    /* height: 70vh; */
     flex-direction: row;
     flex-wrap: wrap;
+    align-content: center;
 }
 
 .container .buttons button {
-    flex: 0 0 25%;
-    max-height: 20%;
+    flex: 0 1 25%;
     aspect-ratio: 1 / 1;
+    height: min-content;
+    max-height: 100px;
     color: #2e2e2e;
     background-color: #cfd0d2;
     font-size: 2rem;
@@ -82,6 +84,6 @@ html, body {
 }
 
 .container .buttons button.two-col {
-    flex: 0 0 50%;
+    flex: 0 1 50%;
     aspect-ratio: 2 / 1;
 }
